[metadata]
name = ccdl
version = attr: ccdl.__version__
description = Online comic downloader
long_description = file: README.md
long_description_content_type = text/markdown
license = unlicense
author = vircoys
author_email = vircoys@gmail.com
url = https://github.com/oxdz/ccdl
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: Public Domain
    Operating System :: OS Independent

[options]
packages = ccdl
install_requires =
    lxml>=4.8.0
    numpy>=1.21.6
    Pillow>=9.1.0
    urllib3>=1.26.9
    requests>=2.27.1
    selenium>=4.1.3
    pyexecjs==1.5.1
    aiohttp>=3.8.1
packages_data =
    ccdl = py.typed
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    ccdl = ccdl.main:main

[options.extras_require]
type =
    types-setuptools
    lxml-stubs
    types-Pillow
    types-urllib3
    types-requests
    types-selenium
dev =
    black
    flake8
    setuptools>=46.4.0
    wheel
    pyinstaller
    %(type)s

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
extend-ignore =
    E741  # ambiguous variable name 'l'
    W605  # invalid escape sequence '\w'

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

