[metadata]
name = ccdl
version = attr: ccdl.__version__
description = Online comic downloader
long_description = file: README.md
long_description_content_type = text/markdown
license = unlicense
author = vircoys
author_email = vircoys@gmail.com
url = https://github.com/oxdz/ccdl
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: Public Domain
    Operating System :: OS Independent

[options]
packages = ccdl
install_requires =
    Pillow>=9.1.0
    aiohttp>=3.8.1
    lxml>=4.8.0
    numpy>=1.21.6
    pyexecjs==1.5.1
    requests>=2.27.1
    selenium>=4.1.3
    urllib3>=1.26.9
packages_data =
    ccdl = py.typed
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    ccdl = ccdl.main:main

[options.extras_require]
type =
    lxml-stubs
    types-Pillow
    types-requests
    types-selenium
    types-setuptools
    types-urllib3
dev =
    black
    flake8
    isort
    pyinstaller
    setuptools>=46.4.0
    wheel
    %(type)s

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
extend-ignore =
    E741  # ambiguous variable name 'l'

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
# strict = True

